Update and rename website.html to index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
   
     <nav class="nav-section">
-      <a href="/my-blog/blog.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="">Pages</a>
       <a href="">Portfolios</a>
       <a href="">Worklife </a>
